--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,19 +1,42 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
-        
-        {
-            "name": "Attach",
-            "port": 9229,
-            "request": "attach",
-            "skipFiles": [
-                "<node_internals>/**"
-            ],
-            "type": "pwa-node"
-        }
+  "configurations": [
+    {
+      "type": "pwa-node",
+      "request": "launch",
+      "name": "lanuch typescript",
+      "program": "${workspaceFolder}/src/index.ts",
+      "skipFiles": ["<node_internals>/**"],
+      "preLaunchTask": "tsc: build - tsconfig.json",
+      "outFiles": ["${workspaceFolder}/out/**/*.js"]
+    },
+    {
+      "name": "lanuch-node-currentFile",
+      "program": "${file}",
+      "request": "launch",
+      "skipFiles": ["<node_internals>/**"],
+      "type": "pwa-node"
+    },
 
-    ]
+    {
+      "name": "debug-demo/index.js",
+      "program": "${workspaceFolder}/src/debug-demo/index.js",
+      "request": "launch",
+      "skipFiles": ["<node_internals>/**"],
+      "type": "pwa-node"
+    },
+    {
+      "type": "pwa-node",
+      "name": "debug-demo/demo.ts",
+      "program": "${workspaceFolder}/src/debug-demo/demo.ts",
+      "request": "launch",
+      "skipFiles": ["<node_internals>/**"]
+    },
+    {
+      "type": "node",
+      "name": "launch-src-index.js",
+      "program": "${workspaceFolder}/src/debug-demo/index.js",
+      "request": "launch",
+      "skipFiles": ["<node_internals>/**"]
+    }
+  ]
 }
