--- a/package.json
+++ b/package.json
@@ -1,20 +1,30 @@
 {
-  "dependencies": {
-    "ts-node": "^10.2.1",
-    "typescript": "^4.4.2"
-  },
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only ./src/demo.ts",
     "client:dev": "webpack --mode development",
     "build-tsc": "tsc ./src/demo.ts",
     "build-webpack": "webpack --config ./webpack.config.js --mode 'development'"
   },
+  "type": "module",
   "devDependencies": {
     "@babel/core": "^7.15.5",
     "@babel/preset-env": "^7.15.4",
     "@babel/preset-typescript": "^7.15.0",
+    "@typescript-eslint/eslint-plugin": "^4.31.0",
+    "@typescript-eslint/parser": "^4.31.0",
     "babel-loader": "^8.2.2",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.24.2",
+    "ts-node": "^10.2.1",
+    "typescript": "^4.4.2",
     "webpack": "^5.52.0",
     "webpack-cli": "^4.8.0"
+  },
+  "dependencies": {
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "exceljs": "^4.3.0",
+    "prettier": "^2.4.0"
   }
 }
